2013-02-07  Ramon Novoa  <rnovoa@artica.es>

	* attachment/mibs,
	  operation/snmpconsole/snmp_browser.php,
	  operation/snmpconsole/snmp_mib_uploader.php,
	  operation/tree/first_leaf.png: Added to repository. SNMP browser.

	* operation/menu.php: Moved SNMP related features to a new SNMP menu.

2013-02-07  Sergio Martin <sergio.martin@artica.es>

	* extensions/plugin_registration.php: Fixed the PSPZ registration
	when max retries are not defined on the ini file
	FIX: 3603725

2013-02-07  Sergio Martin <sergio.martin@artica.es>

	* godmode/agentes/agent_conf_gis.php
	godmode/agentes/agent_manager.php
	godmode/massive/massive_edit_agents.php: Change a strings of 
	ignore gis option in agent configuration to be more usable

2013-02-07 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_ui.php, include/ajax/agent.php: improved the
	widget of autocomplete agent, now show first the agents with same
	name to the search, second block with the agents with the address
	same to the search and the last block is the agents with the
	description with the same to the search.
	
	Fixes: #3603692
	
	* godmode/modules/manage_nc_groups.php,
	godmode/modules/manage_network_templates.php,
	godmode/modules/manage_network_templates_form.php: improved the code
	style.

2013-02-07 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/db/db_refine.php, godmode/servers/plugin.php: improved
	the code style.
	
	* include/functions_reporting.php: fixed the SLA when it is the
	equal to limit.
	
	Fixes: #3602722

2013-02-07 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/modules/manage_network_components_form_common.php: fixed
	the show types of module.
	
	MERGED FROM THE PANDORA_4

2013-02-07 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/users/user_list.php, godmode/users/profile_list.php,
	godmode/users/configure_user.php,
	godmode/users/configure_profile.php, godmode/db/db_audit.php,
	include/functions_reporting.php: cleaned source code style.
	